Changes since 0.3:

Add CREATE INDEX (with a syntax which seems compatible with most other
databases I tried):
    CREATE [UNIQUE] INDEX index-name ON table(column, ...)
As with the MySQL INDEX syntax
    CREATE TABLE(a INTEGER, INDEX(a))
the index is a no-op, but in this case UNIQUE is not a no-op - it
has the same effect as any other unique constraint.

ALTER TABLE can now control the position of the added column,
using the same syntax as MySQL:
  ALTER TABLE ADD COLUMN B INTEGER AFTER A
  ALTER TABLE ADD COLUMN A INTEGER FIRST
  
The dumper can now optionally omit the next value for auto-increment
or identity columns.

Accept the SQL 2003 syntax for an identity column:
    a INTEGER GENERATED BY DEFAULT AS IDENTITY[(STARTS WITH value)]
Support two variants of this functionality:
* An identity column is enabled by the SQL 2003 syntax.  It is based on
a sequence (that is, the value to be inserted by default is not affected
by other insert statements into the table).
* An auto-increment column is enabled by the AUTO_INCREMENT syntax.
It is based on the existing values (that is, inserting another value
into the table will change the value to be inserted).
Older versions of Mayfly had only identity columns.

Changes from 0.2 to 0.3:

Accept the MySQL syntax:
    INSERT INTO table SET col = value, col2 = value2, ...
Although this syntax is supported by no/few databases other than
MySQL, and it is merely a convenience, Mayfly does provide it,
simply because the standard syntax
    INSERT INTO table(col, col2) VALUES(value, value2)
can be really hard to read if there are more than a few columns.

New method in Database to set table names to case sensitive.

Accept the MySQL index syntax:
    CREATE TABLE(a INTEGER, INDEX(a))
as a noop.

Mayfly now supports many subselects, for example:
    select name from foo where x = (select max(y) from bar)
    select name from foo where x in (select y from bar)

The new SqlDumper class can dump a database as an SQL script.
