@@ -79,12 +79,12 @@ be little-used and/or non-portable, but in this case there is an
 alternate syntax which will also work with non-Mayfly databases.
 
 This section describes the syntax supported in Mayfly.  In this description,
-Square brackets indicate optional
-elements, vertical bars indicate choices, curly braces simply group
+Square brackets "[]" indicate optional
+elements, vertical bars "|" indicate choices, curly braces "{}" simply group
 elements, "..." indicates that the previous element can be repeated,
 and ", ..." indicates
 that the previous element can be repeated, with commas separating each
-repeat.  Parentheses stand for themselves.
+repeat.  Parentheses "()" stand for themselves.
 
 These descriptions should be read with reference to a more comprehensive
 SQL guide, such as those found at <a href="http://www.sqlzoo.net/" >sqlzoo.net</a>.
@@ -114,7 +114,8 @@ or FOREIGN KEY).
 @subsection createindex CREATE INDEX
 
 <pre>
-CREATE [UNIQUE] INDEX <var>index-name</var> ON <var>table</var>(<var>column</var>, ...)
+CREATE [UNIQUE] INDEX <var>index-name</var> 
+  ON <var>table</var>(<var>column</var> [(<var>width</var>)], ...)
 </pre>
 
 This is a no-op unless the word UNIQUE is specified in which case it
@@ -130,7 +131,9 @@ CREATE TABLE <var>table-name</var> (
   {
     {<var>column-name</var> <var>data-type</var> 
         [ DEFAULT <var>default-value</var> ]
-        [ AUTO_INCREMENT ]
+        [ AUTO_INCREMENT |
+          GENERATED BY DEFAULT AS IDENTITY[(STARTS WITH <var>value</var>)]
+        ]
         {[ NOT NULL | UNIQUE | PRIMARY KEY ]}... 
     } |
 
@@ -156,9 +159,21 @@ bit integers, respectively).  DECIMAL(x,y) is supported.
 For strings, there is VARCHAR(<var>size</var>) (with TEXT
 as a non-standard synonym).  There is partial support for DATE.
 
-An exception to the rule that Mayfly ignores data types are auto-increment columns.
-Either IDENTITY or SERIAL as datatypes indicate an integer column which causes the
-default value to start at one and increment after every row inserted. 
+Mayfly has two kinds of incrementing columns:
+<ul>
+
+<li>An identity column is enabled by GENERATED BY DEFAULT syntax.  
+It is based on
+a sequence (that is, the value to be inserted by default is not affected
+by other insert statements into the table).</li>
+
+<li>An auto-increment column is enabled by the AUTO_INCREMENT syntax.
+It is based on the existing values (that is, inserting another value
+into the table will change the value to be inserted).</li>
+</ul>
+Also, IDENTITY or SERIAL as datatypes indicate an incrementing column
+(currently auto-increment rather than identity and INTEGER for the type, 
+but subject to change to improve compatibility or general usefulness).
 
 Foreign key actions for ON DELETE are NO ACTION, CASCADE, SET NULL, 
 and SET DEFAULT.  Foreign key actions for ON UPDATE are NO ACTION only.
